--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,12 +2,16 @@
 @import './mixin.scss';
 @import './transition.scss';
 @import './element-ui.scss';
-@import './sidebar.scss';
 
+span{
+  font-size: 12px;
+}
 body {
-  height: 100%;
+  height:100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  padding: 0 0 0 0px;
+  margin: 0 0 0 0px;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 }
