--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,11 @@ $subMenuHover:#001528;
 
 $sideBarWidth: 210px;
 
+$bodyMinWidth: 1280px;
+$bodyMinHight:768px;
+$headerHeight:50px;
+$footerHeight:30px;
+$buttonSize:'mini';
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
@@ -22,4 +27,9 @@ $sideBarWidth: 210px;
   subMenuBg: $subMenuBg;
   subMenuHover: $subMenuHover;
   sideBarWidth: $sideBarWidth;
+  bodyMinWidth:$bodyMinWidth;
+  bodyMinHight:$bodyMinHight;
+  footerHeight:$footerHeight;
+  headerHeight:$headerHeight;
+  buttonSize:$buttonSize;
 }
