更改chart图表样式

--- a/src/page/layout/container/styles.scss
+++ b/src/page/layout/container/styles.scss
@@ -6,7 +6,7 @@
 }
 .el-header {
   height: $headerHeight !important;
-  background-color: #B3C0D1;
+  background-color: #49a9ee;
 }
 .el-footer {
   background-color: #B3C0D1;
