--- a/src/page/layout/container/styles.scss
+++ b/src/page/layout/container/styles.scss
@@ -27,7 +27,7 @@
 }
 .el-aside {
   width:$sideBarWidth !important;
-  background: #f4f7f7;
+  background: #545c64;
 }
 .el-main {
   background: #ffffff;
