--- a/src/page/layout/siderbar/styles.scss
+++ b/src/page/layout/siderbar/styles.scss
@@ -1,7 +1,5 @@
-.el-button{
-  width: $sideBarWidth*0.8 !important;
-  height: 40px;
-  margin-top: $sideBarWidth*0.1 !important;
-  margin-left: $sideBarWidth*0.1 !important;
+.el-menu{
+  width: 100%;
+  border: none;
+  height: 100%;
 }
-
