--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,35 +1,27 @@
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
-
-$menuBg:#304156;
-$menuHover:#263445;
-
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
-
+$menuText:#ffffff;
+$menuActiveText:#ffd04b;
+$menuBgColor:#545c64;
+$bodyBgColor:#ffffff;
 $sideBarWidth: 210px;
-
 $bodyMinWidth: 1280px;
 $bodyMinHight:768px;
 $headerHeight:50px;
 $footerHeight:20px;
+$tabHeight:40px;
 $buttonSize:'mini';
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   menuText: $menuText;
   menuActiveText: $menuActiveText;
-  subMenuActiveText: $subMenuActiveText;
-  menuBg: $menuBg;
-  menuHover: $menuHover;
-  subMenuBg: $subMenuBg;
-  subMenuHover: $subMenuHover;
+  menuBgColor:$menuBgColor;
+  bodyBgColor:$bodyBgColor;
   sideBarWidth: $sideBarWidth;
   bodyMinWidth:$bodyMinWidth;
   bodyMinHight:$bodyMinHight;
   footerHeight:$footerHeight;
   headerHeight:$headerHeight;
   buttonSize:$buttonSize;
+  tabHeight:$tabHeight;
 }
