--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 // sidebar
 $menuText:#ffffff;
-$menuActiveText:#ffd04b;
-$menuBgColor:#545c64;
-$bodyBgColor:#ffffff;
+$menuActiveText:#ffffff;
+$menuBgColor:#5b5b5b;
+$bodyBgColor:#f0f0f0;
 $sideBarWidth: 210px;
 $bodyMinWidth: 1000px;
 $bodyMinHight:500px;
