--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 @import './transition.scss';
 @import './element-ui.scss';
 
+
+
 span{
   font-size: 12px;
 }
@@ -73,3 +75,16 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+::-webkit-scrollbar {/*滚动条整体样式*/
+  width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 1px;
+}
+::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+  border-radius: 10px;
+  background:$menuBgColor;
+}
+::-webkit-scrollbar-track {/*滚动条里面轨道*/
+  border-radius: 10px;
+  background: #ffffff;
+}
+
