--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,7 +9,7 @@ $bodyMinHight:500px;
 $headerHeight:50px;
 $footerHeight:20px;
 $tabHeight:45px;
-$buttonSize:'mini';
+$buttonSize:mini;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
@@ -23,5 +23,6 @@ $buttonSize:'mini';
   footerHeight:$footerHeight;
   headerHeight:$headerHeight;
   buttonSize:$buttonSize;
+  controlSize:$buttonSize;
   tabHeight:$tabHeight;
 }
