--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,8 +20,9 @@ body {
   -webkit-font-smoothing: antialiased;
   padding: 0 0 0 0px;
   margin: 0 0 0 0px;
+  overflow: hidden;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family:'微软雅黑';
 }
 
 label {
@@ -76,12 +77,12 @@ div:focus {
   padding: 20px;
 }
 ::-webkit-scrollbar {/*滚动条整体样式*/
-  width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
-  height: 1px;
+  width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 16px;
 }
 ::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
   border-radius: 10px;
-  background:$menuBgColor;
+  background:#c1c1c1;
 }
 ::-webkit-scrollbar-track {/*滚动条里面轨道*/
   border-radius: 10px;
