--- a/src/page/user/login/styles.scss
+++ b/src/page/user/login/styles.scss
@@ -1,27 +1,34 @@
 .logingPanel{
   width: 100%;
   height: 100%;
+  min-width: $bodyMinWidth !important;
+  min-height:$bodyMinHight !important;
   background-color: #1c77ac;
-  background-image: url('../../../assets/images/login-ground.svg');
+  background-image: url('~@/assets/images/login-ground.svg');
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center top;
-  overflow: hidden;
+  overflow: auto;
 }
 .loginbm{
   height:$footerHeight*2; 
   line-height:$footerHeight; 
   text-align:center; 
-  background:url('../../../assets/images/login-bottom.svg') repeat-x;
+  background:url('~@/assets/images/login-bottom.svg') repeat-x;
   position:absolute; 
   bottom:0; 
   width:100%; 
   color:#0b3a58;
+  z-index: 69;
 }
+.el-button{float: left;width: 100px;}
+.el-checkbox{float: left;margin-left: 5px;}
+.el-link{float: right;margin-left: 20px;}
 .el-form{margin-top:88px; margin-left:285px;}
-.el-input{z-index:3 !important};
-.cloud {position:absolute;width:100%;height:100%;background:url('../../../assets/images/cloud.png') no-repeat;z-index:1;opacity: 0.5;}
+.el-form-item{padding-right: 20px;}
+.cloud {position:absolute;width:100%;height:100%;background:url('~@/assets/images/login-cloud.svg') no-repeat;z-index:1;opacity: 0.5;}
 #cloud2 {z-index:2;top:480px;}
 #cloud1{top:100px}
-.loginbody{background:url('../../../assets/images/login-body.svg') no-repeat center center; width:100%; height:585px; overflow:hidden; position:absolute; top:47px;}
-.systemlogo{background:url('../../../assets/images/login-logo.svg') no-repeat center;width:100%; height:71px; margin-top:75px;}
-.loginbox{width:692px; height:336px; background:url('../../../assets/images/login-boxinfo.svg') no-repeat; margin-top:30px;}
+.loginbody{background:url('~@/assets/images/login-body.svg') no-repeat center center; width:100%; height:585px; overflow:hidden; position:absolute; top:47px;}
+.systemlogo{background:url('~@/assets/images/login-logo.svg') no-repeat center;width:100%; height:71px; margin-top:75px;}
+.loginbox{width:692px; height:336px; background:url('~@/assets/images/login-boxinfo.svg') no-repeat; margin-top:30px;z-index: 2;}
