--- a/src/page/user/login/styles.scss
+++ b/src/page/user/login/styles.scss
@@ -5,10 +5,8 @@
   min-height:$bodyMinHight !important;
   background-color: #1c77ac;
   background-image: url('~@/assets/images/login-ground.svg');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
-  background-position: center top;
-  overflow: auto;
 }
 .loginbm{
   height:$footerHeight*2; 
@@ -26,7 +24,7 @@
 .el-link{float: right;margin-left: 20px;}
 .el-form{margin-top:88px; margin-left:285px;}
 .el-form-item{padding-right: 20px;}
-.cloud {position:absolute;width:100%;height:100%;background:url('~@/assets/images/login-cloud.svg') no-repeat;z-index:1;opacity: 0.5;}
+.cloud {position:absolute;width:405;height:165;background:url('~@/assets/images/login-cloud.svg') no-repeat;z-index:1;opacity: 0.5;}
 #cloud2 {z-index:2;top:480px;}
 #cloud1{top:100px}
 .loginbody{background:url('~@/assets/images/login-body.svg') no-repeat center center; width:100%; height:585px; overflow:hidden; position:absolute; top:47px;}
