--- a/src/page/user/login/styles.scss
+++ b/src/page/user/login/styles.scss
@@ -1,34 +1,97 @@
 .logingPanel{
-  width: 100%;
+  background: url('~@/assets/images/login-bg.svg');
   height: 100%;
-  min-width: $bodyMinWidth !important;
-  min-height:$bodyMinHight !important;
-  background-color: #1c77ac;
-  background-image: url('~@/assets/images/login-ground.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top;
-  overflow: auto;
+  width: 100%;
+  background-size:cover;
+  position: absolute;
+  left: 0px;
+  top:0px;
+  z-index: 1;
 }
-.loginbm{
-  height:$footerHeight*2; 
-  line-height:$footerHeight; 
-  text-align:center; 
-  background:url('~@/assets/images/login-bottom.svg') repeat-x;
-  position:absolute; 
-  bottom:0; 
-  width:100%; 
-  color:#0b3a58;
-  z-index: 4;
+.loginBody{
+  width: 840px;
+  height: 450px;
+  z-index: 2;
+  overflow: hidden;
+  position: absolute;
 }
-.el-button{float: left;width: 100px;}
-.el-checkbox{float: left;margin-left: 5px;}
-.el-link{float: right;margin-left: 20px;}
-.el-form{margin-top:88px; margin-left:285px;}
-.el-form-item{padding-right: 20px;}
-.cloud {position:absolute;width:100%;height:100%;background:url('~@/assets/images/login-cloud.svg') no-repeat;z-index:1;opacity: 0.5;}
-#cloud2 {z-index:2;top:480px;}
-#cloud1{top:100px}
-.loginbody{background:url('~@/assets/images/login-body.svg') no-repeat center ; width:100%; height:585px; overflow:hidden; position:absolute; top:47px;}
-.systemlogo{background:url('~@/assets/images/login-logo.svg') no-repeat center; height:71px; margin-top:20px;margin-left:50px ;}
-.loginbox{width:692px; height:336px; background:url('~@/assets/images/login-boxinfo.svg') no-repeat center; margin-top:20px;z-index: 2;}
+.footerBody{
+  width: 840px;
+  z-index: 2;
+  position: absolute;
+  bottom: 0px;
+  overflow: hidden;
+}
+.footerBody p{
+  color: #CCCCCC;
+  float: right;
+  text-align: center;
+}
+.el-col:nth-of-type(1) span:nth-of-type(1){
+  font-size: 26px !important;
+  font-weight:700;font-style:normal;
+}
+.el-col:nth-of-type(1) span:nth-of-type(2){
+  font-size: 20px !important;
+  font-weight:400;font-style:normal;
+}
+.el-col:nth-of-type(1) p:nth-of-type(1){
+  margin-top:80px;
+}
+.el-col:nth-of-type(1) p:nth-of-type(2){
+  margin-top:35px;
+}
+.el-col:nth-of-type(1){
+  color: white;
+  text-align: center;
+  vertical-align: middle !important;
+  background-color: #0073fb;
+}
+.el-col:nth-of-type(2){
+  color: #999999;
+  background-color:white;
+}
+.el-col:nth-of-type(2) {
+  padding-top : 40px;
+  padding-left : 60px;
+  padding-bottom : 20px;
+  padding-right : 60px;
+}
+.el-col:nth-of-type(2) span{
+  font-size: 16px !important;
+  font-weight: 700;
+  font-style: normal
+}
+.el-col:nth-of-type(2) span:nth-of-type(2){
+  font-size: 14px !important;
+  font-weight: 600;
+  font-style: normal
+}
+.el-col:nth-of-type(2) p:nth-of-type(2){
+  color: red;
+}
+.el-col:nth-of-type(2) p:nth-of-type(1){
+  margin-bottom: 30px;
+}
+.el-row{
+  height: 100% !important;
+}
+.el-col{
+  height: 100% !important;
+}
+.el-button{
+  width: 100%;
+}
+.el-checkbox{
+  float: left;
+}
+
+.el-link{
+  float: right;
+}
+.el-form-item{
+  margin-top: 30px;
+}
+.el-form-item:nth-of-type(1){
+  margin-top: 0px;
+}
