--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@ body {
   padding: 0 0 0 0px;
   margin: 0 0 0 0px;
   text-rendering: optimizeLegibility;
-  font-family:'微软雅黑';
+  font-family: '微软雅黑 ', '微软雅黑 Regular', '微软雅黑';
   overflow: hidden;
 }
 
