--- a/src/page/user/logindeclar/styles.scss
+++ b/src/page/user/logindeclar/styles.scss
@@ -1,11 +1,14 @@
 .logingPanel{
-  background: url('~@/assets/images/login-bg.svg');
-  height: 100%;
   width: 100%;
-  background-position: center center;
+  height: 100%;
+  min-width: $bodyMinWidth !important;
+  min-height:$bodyMinHight !important;
+  background-color: #1c77ac;
+  background-image: url('~@/assets/images/login-ground.svg');
   background-repeat: no-repeat;
-  background-size:cover;
-  background-attachment:fixed;
+  background-size: cover;
+  background-position: center top;
+  overflow: auto;
 }
 .loginbm{
   height:$footerHeight*2; 
