--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@
 
 
 span{
-  font-size: 12px;
+  font-size: $fontSize;
 }
 // .el-card__body{
 //   background-color: $bodyBgColor !important;
@@ -80,8 +80,8 @@ div:focus {
   padding: 20px;
 }
 ::-webkit-scrollbar {/*滚动条整体样式*/
-  width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
-  height: 16px;
+  width: 7px;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 14px;
 }
 ::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
   border-radius: 10px;
