--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,15 @@
 // sidebar
-$menuText:#ffffff;
-$menuActiveText:#ffffff;
-$menuBgColor:#5b5b5b;
+$menuText:#ebf2fe;
+$menuActiveText:#ebf2fe;
+$menuBgColor:#015cf2;
 $bodyBgColor:#f7f7f7;
-$sideBarWidth: 210px;
 $bodyMinWidth: 1024px;
+$serviceMaxWidth:1280px; 
 $bodyMinHight:628px;
-$headerHeight:88px;
-$footerHeight:20px;
-$tabHeight:45px;
+$headerHeight:68px;
+$tabHeight:30px;
 $buttonSize:mini;
+$fontSize:12px;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
@@ -17,12 +17,12 @@ $buttonSize:mini;
   menuActiveText: $menuActiveText;
   menuBgColor:$menuBgColor;
   bodyBgColor:$bodyBgColor;
-  sideBarWidth: $sideBarWidth;
   bodyMinWidth:$bodyMinWidth;
   bodyMinHight:$bodyMinHight;
-  footerHeight:$footerHeight;
   headerHeight:$headerHeight;
   buttonSize:$buttonSize;
   controlSize:$buttonSize;
   tabHeight:$tabHeight;
+  fontSize:$fontSize;
+  serviceMaxWidth:$serviceMaxWidth;
 }
