--- a/src/page/user/login/styles.scss
+++ b/src/page/user/login/styles.scss
@@ -68,7 +68,8 @@
   font-style: normal
 }
 .el-col:nth-of-type(2) p:nth-of-type(2){
-  color: red;
+    color: #F56C6C;
+    font-size: 12px;
 }
 .el-col:nth-of-type(2) p:nth-of-type(1){
   margin-bottom: 30px;
