--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,28 +1,4 @@
-@mixin clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-@mixin scrollBar {
-  &::-webkit-scrollbar-track-piece {
-    background: #d3dce6;
-  }
-
-  &::-webkit-scrollbar {
-    width: 6px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #99a9bf;
-    border-radius: 20px;
-  }
-}
-
-@mixin relative {
-  position: relative;
-  width: 100%;
-  height: 100%;
+@mixin font-styles {
+  font-size: 12px !important;
+  font-family: '微软雅黑 ', '微软雅黑 Regular', '微软雅黑' !important;
 }
