--- a/src/page/eam/eamPartLibrary/partsAccount/component/modifyRecord/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/modifyRecord/styles.scss
@@ -3,3 +3,9 @@
   margin-top:10px;
   border-radius: 4px;
 }
+.el-card__body {
+  padding: 10px 20px 5px 10px;
+}
+.el-table .cell{
+  text-align: center;
+}
