--- a/src/page/eam/eamPartLibrary/partsAccount/component/details/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/details/styles.scss
@@ -15,3 +15,29 @@
   background-color: #dcdfe6;
   padding: 10px 20px;
 }
+.item-block {
+  .item-title {
+    font-size: 15px;
+    font-weight: 700;
+  }
+}
+.el-form--label-top .el-form-item__label {
+  padding: 0 0 0px;
+}
+.el-form-item {
+  margin-bottom: 10px;
+}
+.contents{
+  line-height: 30px;
+}
+.el-divider--horizontal{
+  margin:6px 0;
+  background-color: #2db7f5;
+}
+.info-title{
+  color: #606266;
+  font-weight: bold;
+}
+.info-content{
+  color: #909399;
+}
