--- a/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
@@ -2,20 +2,32 @@
   margin-bottom: 22 px;
   span {
     font-size: 14px;
+    font-weight: bold;
   }
   .upload-demo {
     margin: 20px 0px;
   }
 }
+// .el-form-item__label
 .el-form--label-top .el-form-item__label{
     padding:0 0 0px;
 }
 .el-form-item {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .right{
   margin-bottom:10px;
 }
 .el-divider--horizontal {
-  margin: 8px 0;
+  margin: 8px 0px 10px;
+}
+.el-upload-dragger {
+  width: 290px !important;
+  height: 160px !important;
+}
+.el-date-editor.el-input, .el-date-editor.el-input__inner{
+  width: 215px !important;
+}
+.el-table .cell{
+  text-align: center;
 }
