--- a/src/page/eam/eamPartLibrary/partsAccount/component/paramsTable/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/paramsTable/styles.scss
@@ -1,11 +1,33 @@
+.el-table-add-row {
+  margin-top: 10px;
+  width: 100%;
+  height: 34px;
+  border: 1px dashed #c1c1cd;
+  border-radius: 1px;
+  cursor: pointer;
+  justify-content: center;
+  display: flex;
+  line-height: 34px;
+}
+.el-tag--mini {
+  margin: 0 2px;
+}
 .tableClass{
   margin-top:10px;
   margin-bottom:10px;
   text-align: center;
 }
-.el-table th>.cell{
-  text-align: center;
-}
-.el-table td div {
-  text-align: center;
-}
+// .el-table th>.cell{
+//   text-align: center;
+// }
+// .el-table td div {
+//   text-align: center;
+// }
+// .buttonAdd{
+//   float: left;
+//   margin-top: 10px;
+//   margin-bottom: 3px;
+// }
+// // .item-block span {
+// //   font-weight: bold;
+// // }
