--- a/src/page/eam/eamPartLibrary/partsAccount/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/styles.scss
@@ -4,9 +4,9 @@
 .el-table td div {
   text-align: center;
 }
-/* .el-pagination{
+.el-pagination{
   padding: 5px 0px;
-} */
+} 
 .el-card__body{
   padding: 10px;
 }
@@ -18,5 +18,5 @@
   margin-top: 5px;
 }
 .el-pagination__sizes {
-  margin: 0 30px 0 0;
+  margin-right: 30px;
 }
