--- a/src/page/eam/eamPartLibrary/partsAccount/component/details/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/details/styles.scss
@@ -32,7 +32,7 @@
 }
 .el-divider--horizontal{
   margin:6px 0;
-  background-color: #2db7f5;
+  background-color: #015cf2;
 }
 .info-title{
   color: #606266;
