--- a/src/page/eam/eamPartLibrary/partsAccount/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/styles.scss
@@ -17,6 +17,13 @@
 .pageHeight{
   margin-top: 5px;
 }
-.el-pagination__sizes {
+/deep/.el-pagination__sizes {
   margin-right: 30px;
+}
+/deep/.el-input-group__append {
+  background-color: #409EFF;
+  border: 1px solid #409EFF;
+}
+/deep/.el-icon-search{
+  color: #ffffff;
 }
