--- a/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
@@ -1,22 +1,15 @@
 .item-block {
-  margin-bottom: 22 px;
+  // margin-bottom: 22 px;
   span {
     font-size: 14px;
     font-weight: bold;
   }
   .upload-demo {
-    margin: 20px 0px;
+    margin: 10px 0px;
   }
 }
-// .el-form-item__label
-.el-form--label-top .el-form-item__label{
-    padding:0 0 0px;
-}
 .el-form-item {
-  margin-bottom: 15px;
-}
-.right{
-  margin-bottom:10px;
+  margin-bottom: 20px;
 }
 .el-divider--horizontal {
   margin: 8px 0px 10px;
@@ -28,10 +21,34 @@
 .el-date-editor.el-input, .el-date-editor.el-input__inner{
   width: 215px !important;
 }
-.el-table .cell{
-  text-align: center;
-}
 /deep/.el-upload-dragger {
-  width: 270px;
+  width: 230px;
   height: 140px;
 }
+/deep/.avatar-uploader .el-upload {
+    border: 1px dashed #d9d9d9;
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+  .avatar-uploader .el-upload:hover {
+    border-color: #409EFF;
+  }
+  .avatar-uploader-icon {
+    font-size: 28px;
+    color: #8c939d;
+    width: 185px;
+    height: 185px;
+    line-height: 185px;
+    text-align: center;
+    border: 1px;
+  }
+  .avatar {
+    width: 185px;
+    height: 175px;
+    display: block;
+  }
+  .el-upload__tip{
+    margin: 5px 0px 10px 0;
+  }
