修改样式，传值

--- a/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
+++ b/src/page/eam/eamPartLibrary/partsAccount/component/edit/styles.scss
@@ -8,9 +8,9 @@
     margin: 10px 0px;
   }
 }
-.el-form-item {
-  margin-bottom: 20px;
-}
+// .el-form-item {
+//   margin-bottom: 20px;
+// }
 .el-divider--horizontal {
   margin: 8px 0px 10px;
 }
@@ -19,7 +19,7 @@
   height: 160px !important;
 }
 .el-date-editor.el-input, .el-date-editor.el-input__inner{
-  width: 215px !important;
+  width: 193px !important;
 }
 /deep/.el-upload-dragger {
   width: 230px;
