--- a/src/page/user/login/styles.scss
+++ b/src/page/user/login/styles.scss
@@ -23,17 +23,22 @@
   overflow: hidden;
 }
 .footerBody p{
-  color: #CCCCCC;
+  span{
+    color: #CCCCCC !important;
+  }
+  
   float: right;
   text-align: center;
 }
 .el-col:nth-of-type(1) span:nth-of-type(1){
   font-size: 26px !important;
-  font-weight:700;font-style:normal;
+  font-weight:400 !important;
+  font-style:normal;
 }
 .el-col:nth-of-type(1) span:nth-of-type(2){
   font-size: 20px !important;
-  font-weight:400;font-style:normal;
+  font-weight:300 !important; 
+  font-style:normal;
 }
 .el-col:nth-of-type(1) p:nth-of-type(1){
   margin-top:80px;
@@ -43,6 +48,9 @@
 }
 .el-col:nth-of-type(1){
   color: white;
+  span{
+    color: white;
+  }
   text-align: center;
   vertical-align: middle !important;
   background-color: #0073fb;
@@ -59,12 +67,12 @@
 }
 .el-col:nth-of-type(2) span{
   font-size: 16px !important;
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal
 }
 .el-col:nth-of-type(2) span:nth-of-type(2){
   font-size: 14px !important;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal
 }
 .el-col:nth-of-type(2) p:nth-of-type(2){
