--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,4 +1,6 @@
 @mixin font-styles {
-  font-size: 12px !important;
+  font-size: $fontSize !important;
+  color: #808695;
   font-family: '微软雅黑 ', '微软雅黑 Regular', '微软雅黑' !important;
+  font-weight:400 !important;
 }
