--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,11 @@
 span{
   @include font-styles;
 }
+.el-button:not(.el-button--default):not(.el-button--text) span{
+  @include font-styles;
+  color: white;
+}
+
 // .el-card__body{
 //   background-color: $bodyBgColor !important;
 // }
@@ -79,16 +84,5 @@ div:focus {
 .app-container {
   padding: 20px;
 }
-::-webkit-scrollbar {/*滚动条整体样式*/
-  width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
-  height: 8px;
-}
-::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
-  border-radius: 10px;
-  background:#c1c1c1;
-}
-::-webkit-scrollbar-track {/*滚动条里面轨道*/
-  border-radius: 10px;
-  background: #ffffff;
-}
+
 
