--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,21 +1,25 @@
 // sidebar
-$menuText:#ebf2fe;
-$menuActiveText:#ebf2fe;
-$menuBgColor:#015cf2;
+
 $bodyBgColor:#f7f7f7;
 $bodyMinWidth: 1024px;
-$serviceMaxWidth:1280px; 
+$siderWidth:210px;
 $bodyMinHight:628px;
-$headerHeight:63px;
-$tabHeight:30px;
+$headerHeight:60px;
+$tabHeight:40px;
 $buttonSize:mini;
 $fontSize:12px;
+
+$menuText:#bfcbd9;
+$menuActiveText:#409EFF;
+$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+$menuBg:#304156;
+$menuHover:#263445;
+$subMenuBg:#1f2d3d;
+$subMenuHover:#001528;
+$menuBgColor:$menuBg;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
-  menuText: $menuText;
-  menuActiveText: $menuActiveText;
-  menuBgColor:$menuBgColor;
   bodyBgColor:$bodyBgColor;
   bodyMinWidth:$bodyMinWidth;
   bodyMinHight:$bodyMinHight;
@@ -24,5 +28,8 @@ $fontSize:12px;
   controlSize:$buttonSize;
   tabHeight:$tabHeight;
   fontSize:$fontSize;
-  serviceMaxWidth:$serviceMaxWidth;
+  siderWidth:$siderWidth;
+  menuBg:$menuBg;
+  menuText:$menuText;
+  menuActiveText:$menuActiveText;
 }
