--- a/src/page/system/userManager/user/userTable/styles.scss
+++ b/src/page/system/userManager/user/userTable/styles.scss
@@ -4,3 +4,12 @@
 /deep/.el-dialog__body{
   padding: 0px 20px;
 }
+.userForm{
+  width: 80%;
+  margin-left: 10%;
+}
+/deep/.el-input-group__append {
+  background-color: #409EFF;
+  border: 1px solid #409EFF;
+  color:#fff
+}
