--- a/src/page/system/roleManager/styles.scss
+++ b/src/page/system/roleManager/styles.scss
@@ -8,3 +8,8 @@
 /deep/.el-pager li.active{
     border: 1px solid;
 }
+/deep/.el-input-group__append {
+    background-color: #409EFF;
+    border: 1px solid #409EFF;
+    color:#fff
+  }
