--- a/src/page/system/userManager/user/userTable/styles.scss
+++ b/src/page/system/userManager/user/userTable/styles.scss
@@ -13,3 +13,9 @@
   border: 1px solid #409EFF;
   color:#fff
 }
+/deep/.el-drawer__header{
+  margin-bottom: 0px;
+}
+/deep/.el-divider--horizontal {
+  margin: 12px 0px;
+}
